wacc/test/golden/semanticErr.exit.exitNonInt
# exit with non-int - this should be an invalid program! 

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char x = 'f' ;
  exit x
end


Semantic error in test/wacc_examples/invalid/semanticErr/exit/exitNonInt.wacc (line 13, column 8):
type error: expected an int but found a char
>   char x = 'f' ;
>   exit x
>        ^
> end

